# MicroToDo

./: .gitignore  Auther.qml  BackgroundRectangle.qml  CMakeLists.txt  ColoredText.qml  Main.qml  Settings.qml  Storage.qml  ToDoList.qml  UI.qml  authserver.cpp  authserver.h  http.js  main.cpp
